removes margin on an authors avatar--xl to fix central alignment, formats code

--- a/components/04-molecules/article&blog-post-elements/author-bio/_author-bio.scss
+++ b/components/04-molecules/article&blog-post-elements/author-bio/_author-bio.scss
@@ -41,8 +41,10 @@ $author-text-margin: 0.18rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    //justify-content: center;
 
+    .avatar--xl {
+      margin: 0;
+    }
 
     .avatar__image {
       margin-bottom: $spacer-base;
@@ -72,7 +74,6 @@ $author-text-margin: 0.18rem;
       }
     }
   }//end of author-bio--large
-
 }
 
 .author-bio__head {
